kubernetes/apps/whoami/overlays/workload-prd/public-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-public
  namespace: whoami
spec:
  parentRefs:
    - name: public
      namespace: public-gateway
  hostnames:
    - "whoami.yuriykovalchuk.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami
          port: 80
